# suno-prompter

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  verify_setup.sh
.claude/: settings.json
.claude/commands/openspec/: apply.md  archive.md  proposal.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
agents/: __init__.py  chat_agent.py  factory.py  lyric_reviewer_agent.py  lyric_template_agent.py  lyric_writer_agent.py  suno_producer_agent.py
backend/: __init__.py  app.py  requirements.txt
backend/api/: __init__.py  prompter.py
backend/services/: __init__.py  config.py
backend/services/agents/: __init__.py  factory.py  lyric_reviewer_agent.py  lyric_template_agent.py  lyric_writer_agent.py  suno_producer_agent.py
backend/services/data/: starter_ideas.txt
backend/services/utils/: __init__.py  ideas.py  logging.py
backend/services/workflows/: __init__.py  lyric_workflow.py
data/: starter_ideas.txt
devui/: agents.py
docs/: azure-container.md  playwright-mcp-manual.md
frontend/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/services/: api.ts
openspec/: project.md
openspec/changes/add-lyric-template-agent/: tasks.md
openspec/changes/add-streamlit-agent-chat/: proposal.md  tasks.md
openspec/changes/add-suno-producer-agent/: design.md  tasks.md
openspec/changes/add-uvx-distribution/: tasks.md
openspec/changes/add-workflow-orchestration/: proposal.md  tasks.md
openspec/changes/enhance-suno-producer-knowledge/: proposal.md
openspec/changes/generate-and-review-lyrics/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-framework-workflows/: design.md  proposal.md  tasks.md
openspec/changes/refactor-to-flask-react-app/: design.md  proposal.md  tasks.md
openspec/changes/refactor-workflow-agent-framework/: design.md  proposal.md
openspec/specs/lyric-template-agent/: spec.md
openspec/specs/streamlit-app/: spec.md
openspec/specs/suno-meta-tag-knowledge/: spec.md
openspec/specs/suno-producer-agent/: spec.md
openspec/specs/uvx-distribution/: spec.md
openspec/specs/workflow-orchestration/: spec.md
src/suno_prompter/: __init__.py  __main__.py  app.py  cli.py  config.py
src/suno_prompter/adapters/: __init__.py  streamlit_adapter.py
src/suno_prompter/agents/: __init__.py  factory.py  lyric_reviewer_agent.py  lyric_template_agent.py  lyric_writer_agent.py  suno_producer_agent.py
src/suno_prompter/utils/: __init__.py  ideas.py  logging.py
utils/: ideas.py
workflows/: __init__.py  lyric_workflow.py
(+51 files in other folders)
